namespace TVA.Demo.App.Domain.Entities
{
    public class AccountStatusDto
    {
        public required int Id { get; set; }
        public required string Description { get; set; }
    }
}
